--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.5.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.3"
   },
   "devDependencies": {},
   "scripts": {
