--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
+    "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.3"
   },
   "devDependencies": {},
